<resources>
    <string name="app_name">Nanny App</string>
    <string name="title_activity_admin">AdminActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="send">تأكيد</string>
    <string name="status">قيد المعالجة</string>
    <string name="reject">الحالة: تم الرفض</string>
    <string name="child_age">عمر الطفل</string>
    <string name="booking_type">نوع الحجز</string>
    <string name="note">ملاحظة</string>
    <string name="signIn">تسجيل الدخول</string>
    <string name="name">الاسم</string>
    <string name="email">البريد الإلكتروني</string>
    <string name="password">كلمة المرور</string>
    <string name="confirm_password">تأكيد كلمة المرور</string>
    <string name="phone">الجوال</string>
    <string name="address">العنوان</string>
    <string name="enter_email">أدخل بريدك الإلكتروني</string>
    <string name="details">انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن</string>
    <string name="details2">انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن انا مربية محترفة استطيع رعاية طفلك بافضل شكل ممكن</string>

    <string name="menu_nanny_requests">طلبات المربيات</string>
    <string name="menu_accepted_nanny">المربيات</string>
    <string name="menu_blocked_nanny">المربيات المحظورة</string>
    <string name="menu_logout">تسجيل الخروج</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_parent">ParentActivity</string>

    <string name="menu_nannies">المربيات</string>
    <string name="menu_bookings">الحجوزات</string>
    <string name="menu_booking_nanny">حجز المربية</string>
    <string name="menu_profile">الملف الشخصي</string>
    <string name="menu_evaluation">التقيمات</string>
    <string name="menu_accepted_booking">الحجوزات المقبولة</string>
    <string name="menu_chat">المحادثات</string>
    <string name="add_comment">إضافة تعليق</string>
    <string name="title_activity_nanny">NannyActivity</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="create_account">إنشاء حساب</string>
    <string name="write_your_name">اكتب الاسم بالكامل</string>
    <string name="write_your_email">اكتب البريد الالكتروني</string>
    <string name="invalid_email">البريد غير صالح، حاول مجددا</string>
    <string name="write_your_password">اكتب كلمة المرور</string>
    <string name="password_length">يجب ان لا يقل طول كلمة المرور عن 8 حروف</string>
    <string name="password_not_match">كلمتين المرور غير متطابقتين</string>
    <string name="phone_length">يجب ان يكون رقم الجوال 11 رقم ويبدأ ب 05</string>
    <string name="write_your_phone">اكتب رقم الجوال</string>
    <string name="write_your_city">اكتب اسم المدينة</string>
    <string name="write_your_street">اكتب اسم الشارع</string>
    <string name="write_your_home">اكتب رقم المنزل</string>
    <string name="wait">يرجى الإنتظار</string>
    <string name="login">جاري تسجيل الدخول</string>
    <string name="signup">جاري إنشاء الحساب</string>
    <string name="update">جاري تحديث البيانات</string>
    <string name="rest_link">لقد تم إرسال رابط إعادة تعيين كلمة المرور الي البريد الالكتروني الذي ادخلته</string>
    <string name="languages">اللغات</string>
    <string name="no_nannies">لا توجد طلبات جديدة الان</string>
    <string name="no_booking">ليس لديك طلبات حجز الان</string>
    <string name="no_booking_accepted">لا توجد حجوزات مقبولة حتى الان</string>
    <string name="no_accepted_nannies">لا توجد مربيات في التطبيق حتى الان</string>
    <string name="no_comments">لا توجد تعليقات خاصة بهذة المربية حتى الان</string>
    <string name="no_chats">لا توجد لديك محادثات حتى الان</string>
    <string name="nanny_details">تفاصيل المربية</string>
    <string name="booking_details">تفاصيل الحجز</string>
    <string name="comments">التعليقات</string>
    <string name="special_needs_children">لدي خبرة بذوي الاحتياجات الخاصة</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="ok">حسنا</string>
    <string name="confirm">تأكيد</string>
    <string name="confirming">جاري التأكيد</string>
    <string name="do_you_want_logout">هل تريد حقا تسجيل الخروج</string>
    <string name="attention">انتبه</string>
    <string name="blocked_or_deleted">عفوا يبدو انه قد تم حظر حسابك او حذفه</string>
    <string name="process_nanny_request">طلب انضمام المربية الذي قمت بإرساله قيد المعالجة الان</string>
    <string name="write_your_lagnuage">من فضلك اكتب لغاتك</string>
    <string name="write_your_age">من فضلك اكتب عمرك</string>
    <string name="write_your_nationality">من فضلك اكتب جنسيتك</string>
    <string name="write_your_time">من فضلك اكتب وقت الحجز المفضل لديك</string>
    <string name="write_your_child_age">من فضلك اكتب عمر الطفل</string>
    <string name="write_your_bio">من فضلك اكتب بعض التفاصيل</string>
    <string name="write_note">من فضلك اكتب بعض الملاحظات</string>
    <string name="write_start_date">من فضلك حدد تاريخ البدء</string>
    <string name="wrong_start_date">لا يمكن ان يكون تاريخ البدء قبل تاريخ اليوم الحالي</string>
    <string name="write_end_date">من فضلك حدد تاريخ الإنتهاء</string>
    <string name="write_start_time">من فضلك حدد وقت البدء</string>
    <string name="write_end_time">من فضلك حدد وقت الإنتهاء</string>
    <string name="write_booking_type">من فضلك حدد نوع الحجز</string>
    <string name="write_special_needs">حدد إذا كان طفلك من ذوي الإحتياجات الخاصة أو لا</string>



</resources>