<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_parent_nannies"
            android:icon="@drawable/ic_nanny"
            android:title="@string/menu_nannies" />
        <item
            android:id="@+id/nav_parent_booking_requests"
            android:icon="@drawable/ic_request"
            android:title="@string/menu_bookings" />
        <item
            android:id="@+id/nav_parent_booking_accepted"
            android:icon="@drawable/ic_accepted"
            android:title="@string/menu_accepted_booking" />

        <item
            android:id="@+id/nav_chat"
            android:icon="@drawable/ic_chat"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>