<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation2"
    app:startDestination="@+id/nav_nanny_booking_requests">

    <fragment
        android:id="@+id/nav_nanny_booking_requests"
        android:name="com.example.nannyap.parent.nannies.ParentNanniesFragment"
        android:label="@string/menu_nannies"
        tools:layout="@layout/fragment_parent_nannies" />

    <fragment
        android:id="@+id/nav_nanny_booking_accepted"
        android:name="com.example.nannyap.parent.bookingRequests.ParentRequestsFragment"
        android:label="@string/menu_bookings"
        tools:layout="@layout/fragment_parent_requests" />

    <fragment
        android:id="@+id/nav_nanny_chat"
        android:name="com.example.nannyap.parent.acceptedRequest.ParentAcceptedRequestsFragment"
        android:label="@string/menu_accepted_booking"
        tools:layout="@layout/fragment_parent_accepted_requests" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.nannyap.parent.chat.ChatHomeFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat_home" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.nannyap.outerPages.LoginActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_login" />

</navigation>