<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_nanny_requests">

    <fragment
        android:id="@+id/nav_nanny_requests"
        android:name="com.example.nannyap.admin.nannyRequests.NannyRequestsFragment"
        android:label="@string/menu_nanny_requests"
        tools:layout="@layout/fragment_requests_nanny" />

    <fragment
        android:id="@+id/nav_accepted_nanny"
        android:name="com.example.nannyap.admin.acceptedNannies.AcceptedNannyFragment"
        android:label="@string/menu_accepted_nanny"
        tools:layout="@layout/fragment_accepted_nanny" />

    <activity
        android:id="@+id/nav_logout"
        android:name="com.example.nannyap.outerPages.LoginActivity"
        android:label="@string/menu_logout"
        tools:layout="@layout/activity_login" />
</navigation>