<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    >


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/rest_password_app_logo"
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="66dp"
        android:src="@drawable/logo"
        app:civ_border_width="1dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/card_rest_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginVertical="46dp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="25dp"
        app:cardElevation="8dp"
        app:cardPreventCornerOverlap="true"
        android:background="@drawable/card_outline"
        android:layout_below="@id/rest_password_app_logo"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="4dp"
            >

            <TextView
                android:id="@+id/rest_password_email_txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                android:textColor="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/rest_password_email_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rest_password_email_txt"
                android:layout_marginHorizontal="12dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/gray_border"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="12dp"
                android:textColor="@color/purple_500"
                android:textSize="17sp"
                android:textStyle="bold"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/rest_password_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/rest_password_email_data"
                android:layout_marginStart="84dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="84dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/buttonbg"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/send"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="20sp" />
        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>
