<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:paddingBottom="24dp"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/nanny_registration_image"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:src="@drawable/ic_add_photo"
            app:civ_border_color="@color/purple_200"
            app:civ_border_width="1dp"/>

        <TextView
            android:id="@+id/nanny_registration_name_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_image"
            android:layout_marginStart="22dp"
            android:gravity="start"
            android:text="اسم المربية"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nanny_registration_name_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_name_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gray_border"
            android:inputType="text"
            android:padding="10dp"
            android:textColorHint="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nanny_registration_email_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_name_data"
            android:layout_marginStart="22dp"
            android:layout_marginTop="2dp"
            android:text="@string/email"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/nanny_registration_email_data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_email_txt"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="20dp"
            android:background="@drawable/gray_border"
            android:inputType="textEmailAddress"
            android:padding="10dp"
            android:textColorHint="@color/purple_500"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/nanny_registration_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_email_data"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:text="@string/password"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nanny_registration_passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/nanny_registration_password_txt"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/gray_border"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/nanny_registration_password_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gray_border"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/nanny_registration_confirm_password_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/nanny_registration_passwordTIL"
            android:layout_marginStart="22dp"
            android:layout_marginTop="4dp"
            android:text="@string/confirm_password"
            android:textColor="@color/purple_700"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nanny_registration_confirm_passwordTIL"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_below="@id/nanny_registration_confirm_password_txt"
            app:boxStrokeWidth="0dp"
            app:boxStrokeWidthFocused="0dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/nanny_registration_confirm_password_data"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/gray_border"
                android:inputType="textPassword"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                android:textColorHint="@color/purple_500"
                android:textSize="18sp"
                android:textStyle="bold" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:id="@+id/phone_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nanny_registration_confirm_passwordTIL"
            android:layout_marginHorizontal="10dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="14dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nanny_registration_phone_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="@string/phone"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nanny_registration_phone_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border"
                    android:gravity="start"
                    android:inputType="phone"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"

                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nanny_registration_city_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="اسم المدينة"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nanny_egistration_city_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border"
                    android:ellipsize="end"
                    android:inputType="text"
                    android:gravity="start"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/street_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/phone_container"
            android:layout_marginTop="4dp"
            android:layout_marginHorizontal="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nanny_registration_street_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="الشارع"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nanny_registration_street_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border"
                    android:gravity="start"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/nanny_registration_home_number_txt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="start"
                    android:text="رقم المنزل"
                    android:textColor="@color/dark_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/nanny_registration_home_number_data"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:background="@drawable/gray_border"
                    android:ellipsize="end"
                    android:gravity="start"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/nanny_registration_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/street_container"
            android:layout_marginHorizontal="64dp"
            android:layout_marginTop="18dp"
            android:background="@drawable/buttonbg"
            android:padding="0dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>

</ScrollView>
